--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "firebase": "^8.8.1",
     "formik": "^2.2.9",
+    "lodash-core": "^4.17.19",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.29.0",
