--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "date-fns": "^2.26.0",
     "firebase": "^8.8.1",
     "formik": "^2.2.9",
     "lodash-core": "^4.17.19",
